test/Fail/OnlyScopeCheckingRepl.agda
-- Issue #5101

-- Expected error:
-- The --only-scope-checking flag cannot be combined with ...
